--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,17 @@ a {
 * {
   box-sizing: border-box;
 }
+.logo {
+  width: 50px;
+  height: 50px;
+  background-color: red;
+}
+
+.content-wrapper {
+  background: #fff;
+  padding: 24px;
+}
+.footer {
+  background-color: brown;
+  text-align: center;
+}
