--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,15 +14,11 @@ a {
 * {
   box-sizing: border-box;
 }
-.logo {
-  width: 50px;
-  height: 50px;
-  background-color: red;
-}
 
 .content-wrapper {
   background: #fff;
   padding: 24px;
+  min-height: 400px;
 }
 .footer {
   background-color: brown;
